styled eightball image and output div

--- a/eightball/templates/eightball.html
+++ b/eightball/templates/eightball.html
@@ -19,8 +19,10 @@
 </div>
 
 <div class="row text-center">
-    <div class="col-12 col-md-6 offset-md-3">
-        <h1>Output Div</h1>
+    <div id="response-data-container" class="col-12 col-md-6 offset-md-3">
+        <div id="response-data">
+            <p class="lead"><strong>Output Div</strong></p>    
+        </div>
     </div>
 </div>
 
@@ -39,8 +41,10 @@
 </div>
 
 <div class="row text-center">
-    <div class="col-12 col-md-6 offset-md-3">
-        <h1>History Div</h1>
+    <div id="response-history-container" class="col-12 col-md-6 offset-md-3">
+        <div id="response-history">
+            <h1>History Div</h1>
+        </div>
     </div>
 </div>
 {% endblock %}
