--- a/static/css/base.css
+++ b/static/css/base.css
@@ -36,9 +36,25 @@ body {
     z-index: -1;
 }
 
+/* -------------------------------------------------- Body Content */
+
+#mainball {
+	width: 250px; /* Static width/height due to page simplicity */
+}
+
+#response-data-container {
+	height: 150px; /* Static height for response from API */
+	display: table;
+}
+
+#response-data {
+	display: table-cell;
+	vertical-align: middle;
+}
+
 /* -------------------------------------------------- Footer */
 
-.footer {
+footer {
     color: rgb(128, 128, 128);
     color: rgba(255,255,255, 0.5);
     position: fixed;
