--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,7 +1,9 @@
-<div class="container-fluid">
-    <div class="row text-center">
-        <div class="col">
-            <p class="lead">Proudly created by ckz8780. Check out my <a href="https://www.github.com/ckz8780" target="_blank" alt="Click to go to my Github"><strong>Github</strong></a>!</p>
-        </div>
-    </div>
-</div>
+<footer class="footer bg-success">
+	<div class="container-fluid">
+	    <div class="row text-center">
+	        <div class="col">
+	            <p class="lead">Proudly created by ckz8780. Check out my <a href="https://www.github.com/ckz8780" target="_blank" alt="Click to go to my Github"><strong>Github</strong></a>!</p>
+	        </div>
+	    </div>
+	</div>
+</footer>
