--- a/eightball/templates/eightball.html
+++ b/eightball/templates/eightball.html
@@ -21,7 +21,7 @@
 <div class="row text-center">
     <div id="response-data-container" class="col-12 col-md-6 offset-md-3">
         <div id="response-data">
-            <p class="lead"><strong>Output Div</strong></p>    
+            <p class="lead"><strong id="answer">Output Div</strong></p>    
         </div>
     </div>
 </div>
