Handle populating output div and history table

--- a/eightball/templates/eightball.html
+++ b/eightball/templates/eightball.html
@@ -21,7 +21,7 @@
 <div class="row text-center">
     <div id="response-data-container" class="col-12 col-md-6 offset-md-3">
         <div id="response-data">
-            <p class="lead"><strong id="answer">Output Div</strong></p>    
+            <p class="lead"><strong id="answer"></strong></p>    
         </div>
     </div>
 </div>
@@ -43,7 +43,14 @@
 <div class="row text-center">
     <div id="response-history-container" class="col-12 col-md-6 offset-md-3">
         <div id="response-history">
-            <h1>History Div</h1>
+            <table id="response-history-table" class="table">
+                <thead>
+                    <tr>
+                        <th>History of Luck</th>
+                    </tr>
+                </thead>
+                <tbody id="response-history-tbody"></tbody>
+            </table>
         </div>
     </div>
 </div>
