--- a/templates/base.html
+++ b/templates/base.html
@@ -54,7 +54,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <p>You didn't enter a question!</p>
+                    <p>Either your question was too short or you didn't enter one at all. Questions must be at least two characters long, not including leading or trailing whitespaces and question marks.</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-sm btn-success" data-dismiss="modal">Try Again</button>
