first pass on dynamic response colors

--- a/eightball/templates/eightball.html
+++ b/eightball/templates/eightball.html
@@ -21,7 +21,7 @@
 <div class="row text-center">
     <div id="response-data-container" class="col-12 col-md-6 offset-md-3">
         <div id="response-data">
-            <p class="lead"><strong id="answer"></strong></p>    
+            <h4><strong id="answer"></strong></h4>    
         </div>
     </div>
 </div>
@@ -34,7 +34,7 @@
                 <input id="question" class="form-control" type="text" name="question" placeholder="Enter your yes/no question..." required>
             </div>
             <div class="form-group">
-                <input id="submit-question" type="submit" class="btn btn-success btn-block" name="shake" value="Shake the Magic 8-ball">
+                <input id="submit-question" type="submit" class="btn btn-success btn-block mt-4 mb-4" name="shake" value="Shake the Magic 8-ball">
             </div>
         </form>
     </div>
@@ -43,8 +43,8 @@
 <div class="row text-center">
     <div id="response-history-container" class="col-12 col-md-6 offset-md-3">
         <div id="response-history">
-            <table id="response-history-table" class="table">
-                <thead>
+            <table id="response-history-table" class="table table-striped table-dark">
+                <thead class="thead-dark">
                     <tr>
                         <th>History of Luck</th>
                     </tr>
