--- a/eightball/templates/eightball.html
+++ b/eightball/templates/eightball.html
@@ -19,7 +19,7 @@
 </div>
 
 <div class="row text-center">
-    <div id="response-data-container" class="col-12 col-md-6 offset-md-3">
+    <div id="response-data-container" class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
         <div id="response-data">
             <h4><strong id="answer"></strong></h4>    
         </div>
@@ -27,7 +27,7 @@
 </div>
 
 <div class="row text-center">
-    <div class="col-12 col-md-6 offset-md-3">
+    <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
         <form method="POST" id="question-form">
             {% csrf_token %}
             <div class="form-group">
@@ -41,9 +41,9 @@
 </div>
 
 <div class="row text-center">
-    <div id="response-history-container" class="col-12 col-md-6 offset-md-3">
+    <div id="response-history-container" class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
         <div id="response-history">
-            <table id="response-history-table" class="table table-striped table-dark">
+            <table id="response-history-table" class="table table-striped table-dark mb-0">
                 <thead class="thead-dark">
                     <tr>
                         <th>History of Luck</th>
