--- a/templates/base.html
+++ b/templates/base.html
@@ -44,11 +44,11 @@
     {% endblock %}
 
     {% block modals %}
-    <div class="modal fade" id="missing-question" tabindex="-1" role="dialog" aria-labelledby="modalCenterTitle" aria-hidden="true">
+    <div class="modal fade" id="invalid-question" tabindex="-1" role="dialog" aria-labelledby="modalCenterTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="modalTitle">Missing Question</h5>
+                    <h5 class="modal-title" id="modalTitle">Invalid Question</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
