--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,17 @@
     
 </head>
 <body>
+    <header class="container">
+        <div class="row text-center">
+            <div class="col-12">
+                <h1 class="display-3 mt-2">
+                    {% block header %}
+                    {% endblock %}
+                </h1>
+            </div>
+        </div>
+    </header>
+
     <div class="overlay"></div>
     <section id="core" class="container-fluid">
         <div class="container">
