first round styling auth templates/forms

--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -9,5 +9,9 @@
 {% endblock %}
 
 {% block content %}
-    <p>Password Reset Complete</p>
+<div class="row text-center">
+    <div class="col-12 col-md-6 offset-md-3 mt-5">
+        <h4>Thanks! Your password has been reset! You can now <a href="{% url 'login' %}">log in!</a></h4>
+    </div>
+</div>
 {% endblock %}
