--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -9,5 +9,9 @@
 {% endblock %}
 
 {% block content %}
-    <p>Thanks! An email has been sent.</p>
+<div class="row text-center">
+    <div class="col-12 col-md-6 offset-md-3 mt-5">
+        <h4>An email has been sent! Once you've reset your password, you'll be able to <a href="{% url 'login' %}">log in</a> again.</h4>
+    </div>
+</div>
 {% endblock %}
