--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% load bootstrap_tags %}
+
 {% block title %}
     Magic Eight Ball - Reset Password
 {% endblock %}
@@ -9,14 +11,13 @@
 {% endblock %}
 
 {% block content %}
-    <p>Please enter your email address:</p>
-    <form method="POST">
-        {% csrf_token %}
-        {{ form.email.errors }}
-        <p>
-            <label for="id_email">Email Address: </label>
-            {{ form.email }}
-        </p>
-        <button type="submit">Reset Password</button>
-    </form>
+<div class="row">
+    <div class="col-12 col-md-6 offset-md-3 mt-5">
+        <form method="POST">
+            {% csrf_token %}
+            {{ form | as_bootstrap }}
+            <button class="btn btn-success btn-block btn-lg mt-5" type="submit">Reset Password</button>
+        </form>
+    </div>
+</div>
 {% endblock %}
