--- a/accounts/templates/profile.html
+++ b/accounts/templates/profile.html
@@ -5,9 +5,15 @@
 {% endblock %}
 
 {% block header %}
-    Profile
+    {{ user }}'s Profile
 {% endblock %}
 
 {% block content %}
-    <p>Email: {{ profile.email }}</p>
+<div class="row text-center">
+    <div class="col-12 col-md-6 offset-md-3 mt-5">
+        <h4>Your profile information is below. When you're done here, you can <a href="{% url 'index' %}">head home</a>.</h4>
+        <p class="lead"><strong>Username:</strong> {{ user }}</p>
+        <p class="lead"><strong>Email:</strong> {{ user.email }}</p>
+    </div>
+</div>
 {% endblock %}
