Added top navbar, updated profile template & fixed registration template autofocus

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,10 @@
     
 </head>
 <body>
+    {% block mainnav %}
+        {% include 'mainnav.html' %}
+    {% endblock %}
+
     <header class="container">
         <div class="row text-center">
             <div class="col-12">
