--- a/accounts/templates/profile.html
+++ b/accounts/templates/profile.html
@@ -12,8 +12,22 @@
 <div class="row text-center">
     <div class="col-12 col-md-6 offset-md-3 mt-5">
         <h4>Your profile information is below. When you're done here, you can <a href="{% url 'index' %}">head home</a>.</h4>
-        <p class="lead"><strong>Username:</strong> {{ user }}</p>
-        <p class="lead"><strong>Email:</strong> {{ user.email }}</p>
+        <div id="profile-table-container" class="mt-5">
+	        <table id="profile-table" class="table table-striped table-dark mb-0">
+	            <thead class="thead-dark">
+	                <tr>
+	                    <th>Username</th>
+	                    <th>Email</th>
+	                </tr>
+	            </thead>
+	            <tbody id="profile-tbody">
+	            	<tr>
+	            		<td>{{ user }}</td>
+	            		<td>{{ user.email }}</td>
+	            	</tr>
+	            </tbody>
+	        </table>
+        </div>
     </div>
 </div>
 {% endblock %}
