--- a/static/css/base.css
+++ b/static/css/base.css
@@ -52,7 +52,8 @@ body {
 	vertical-align: middle;
 }
 
-#response-history {
+#response-history,
+#profile-table-container {
     border-radius: .25rem;
     overflow: hidden;
 }
