--- a/static/css/base.css
+++ b/static/css/base.css
@@ -9,10 +9,10 @@ html {
 
 body {
     font-family: 'Roboto', sans-serif;
-    margin-bottom: 56px;
     color: #333;
     background: url("/static/img/alt-bg.jpg") no-repeat center center fixed;
     background-size: cover;
+    padding: 34px 0px;
 }
 
 .condensed {
@@ -20,8 +20,8 @@ body {
 }
 
 #core {
-    min-height: calc(100vh - 34px);
-    padding-bottom: 34px;
+    min-height: calc(100vh - 68px); /* calc 100% viewport height less 34px * 2 for header & footer */
+    /*padding-bottom: 34px;*/
 }
 
 .overlay {
@@ -34,6 +34,60 @@ body {
     top: 0;
     left: 0;
     z-index: -1;
+}
+
+/* -------------------------------------------------- Navbar */
+
+nav {
+    height: 34px;
+    box-shadow: 0px 0px 10px #333;
+    transition: all 0.15s ease-in-out;
+}
+
+.navbar-dark .navbar-brand {
+    font-weight: 700;
+    transition: all 0.25s ease-in-out;
+}
+
+.navbar-dark .navbar-brand:hover {
+    transform: scale(1.10);
+    transition: all 0.25s ease-in-out;
+}
+
+.nav-item a,
+.nav-item a:hover {
+    transition: all 0.25s ease-in-out;   
+}
+
+.dropdown-menu.show, .dropdown-menu {
+    background-color: #28a745;
+    border: none;
+}
+
+.dropdown-item,
+.dropdown-item:focus,
+.dropdown-item:active {
+    background-color: #28a745;
+    color: rgb(128, 128, 128);
+    color: rgba(255, 255, 255, 0.50);
+    transition: all 0.15s ease-in-out;
+}
+
+.dropdown-item:hover {
+    background-color: #1e7e34;
+    color: rgb(192, 192, 192);
+    color: rgba(255, 255, 255, 0.75);
+    transition: all 0.15s ease-in-out;
+}
+
+/* -------------------------------------------------- Navbar Media Queries */
+
+@media(min-width: 768px) {
+    .dropdown-menu-right {
+        box-shadow: 0px -10px 0px #28a745, 0px 2px 10px #333;
+        border-radius: 0px 0px .25rem .25rem;
+        margin-top: -4px;
+    }
 }
 
 /* -------------------------------------------------- Body Content */
