First pass at localStorage response history - OK

--- a/templates/base.html
+++ b/templates/base.html
@@ -84,6 +84,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js" integrity="sha384-u/bQvRA/1bobcXlcEYpsEdFVK/vJs3+T+nXLsBYJthmdBuavHvAW6UsmqO2Gd/F9" crossorigin="anonymous"></script>
     <script src="{% static 'js/base.js' %}" type="text/javascript"></script>
+    <script type="text/javascript">restoreHistoryIfExists("{{ request.user }}");</script>
     {% endblock %}
     
     {% block postloadjs %}
