2nd pass at local response history storage; Added multi-user support and clear-history button - OK

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -112,6 +112,15 @@ nav {
     overflow: hidden;
 }
 
+#clear-history {
+    display: block;
+    padding: 10px 0px;
+}
+
+#clear-history-button {
+    display: none;
+}
+
 /* -------------------------------------------------- Footer */
 
 footer {
