--- a/eightball/templates/eightball.html
+++ b/eightball/templates/eightball.html
@@ -30,7 +30,7 @@
             {% csrf_token %}
             <div class="form-group">
                 <input id="question" class="form-control" type="text" name="question" placeholder="Enter your yes/no question..." required>
-                <input id="current-user" name="currentUser" type="hidden" value="{{ request.user }}">
+                <input id="currentUser" name="currentUser" type="hidden" value="{{ request.user }}">
             </div>
             <div class="form-group">
                 <input id="submit-question" type="submit" class="btn btn-success btn-block mt-4 mb-4" name="shake" value="Shake the Magic 8-ball">
@@ -50,6 +50,7 @@
                 </thead>
                 <tbody id="response-history-tbody"></tbody>
             </table>
+            <span id="clear-history"><button id="clear-history-button" class="btn btn-sm btn-danger">Clear History</button></span>
         </div>
     </div>
 </div>
