--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% load boostrap_tags %}
+{% load bootstrap_tags %}
 
 {% block title %}
 	Magic Eight Ball - Reset Your Password
@@ -10,12 +10,14 @@
     New Password
 {% endblock %}
 
-{% block content %}
-    <p>Please Enter your new password:</o>
-    
-    <form method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Reset Password</button>
-    </form>
+{% block content %}    
+<div class="row">
+    <div class="col-12 col-md-6 offset-md-3 mt-5">
+        <form method="POST">
+            {% csrf_token %}
+            {{ form | as_bootstrap }}
+            <button class="btn btn-success btn-block btn-lg mt-5" type="submit">Reset Password</button>
+        </form>
+    </div>
+</div>
 {% endblock %}
