pushing to personal repo

--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -18,6 +18,7 @@
             {{ form | as_bootstrap }}
             <button class="btn btn-success btn-block btn-lg mt-5" type="submit">Reset Password</button>
         </form>
+        <h4 class="text-center mt-5">Remembered your password? You can go back and <a href="{% url 'login' %}" class="">log in!</a></h4>
     </div>
 </div>
 {% endblock %}
