--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -35,8 +35,8 @@
             {{ login_form | as_bootstrap }}
             <button class="btn btn-success btn-block btn-lg mt-5" type="submit">Login</button>
         </form>
-        <h4 class="text-center mt-5">If you've forgotten your password, you can <a href="{% url 'password_reset' %}" class="">reset it</a>.</h4>
-        <h4 class="text-center">Don't have an account? <a href="{% url 'registration' %}" class="">Create one!</a></h4>
+        <h4 class="text-center mt-5">If you've forgotten your password, you can <a href="{% url 'password_reset' %}">reset it</a>.</h4>
+        <h4 class="text-center">Don't have an account? <a href="{% url 'registration' %}">Create one!</a></h4>
     </div>
 </div>
 {% endblock %}
