--- a/accounts/templates/registration.html
+++ b/accounts/templates/registration.html
@@ -18,7 +18,7 @@
             {{ registration_form | as_bootstrap }}
             <button class="btn btn-success btn-block btn-lg mt-5" type="submit">Register</button>
         </form>
-        <h4 class="text-center mt-5">If you already have an account, you can <a href="{% url 'login' %}" class="">log in</a>.</h4>
+        <h4 class="text-center mt-5">If you already have an account, you can <a href="{% url 'login' %}">log in</a>.</h4>
     </div>
 </div>
 {% endblock %}
