--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,7 @@
     {% endblock %}
 
     {% block modals %}
-    <div class="modal fade" id="invalid-question" tabindex="-1" role="dialog" aria-labelledby="modalCenterTitle" aria-hidden="true">
+    <div class="modal fade" id="invalid-question" tabindex="-1" role="dialog" aria-labelledby="modalTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -83,8 +83,8 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js" integrity="sha384-u/bQvRA/1bobcXlcEYpsEdFVK/vJs3+T+nXLsBYJthmdBuavHvAW6UsmqO2Gd/F9" crossorigin="anonymous"></script>
-    <script src="{% static 'js/base.js' %}" type="text/javascript"></script>
-    <script type="text/javascript">restoreHistoryIfExists("{{ request.user }}");</script>
+    <script src="{% static 'js/base.js' %}"></script>
+    <script>restoreHistoryIfExists("{{ request.user }}");</script>
     {% endblock %}
     
     {% block postloadjs %}
