--- a/templates/mainnav.html
+++ b/templates/mainnav.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-success fixed-top">
-    <a class="navbar-brand py-0" href="{% url 'index' %}"><i class="fa fa-home"></i> Magic 8-Ball {% if request.user.is_authenticated %}<small class="ml-2">Welcome, {{ request.user }}!</small>{% endif %}</a>
-    <button class="navbar-toggler py-0" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+    <a class="navbar-brand py-0 mr-0" href="{% url 'index' %}"><i class="fa fa-home"></i> Magic 8-Ball {% if request.user.is_authenticated %}<small class="welcome ml-2">Logged In: {{ request.user }}</small>{% endif %}</a>
+    <button class="navbar-toggler p-0" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
