Improved function naming and split functions for easier testing, updated readme

--- a/eightball/templates/eightball.html
+++ b/eightball/templates/eightball.html
@@ -56,3 +56,7 @@
 </div>
 {% endblock %}
 
+{% block postloadjs %}
+<script>restoreHistoryFromLocalStorageIfExists("{{ request.user }}");</script>
+{% endblock %}
+
